// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button matches dark theme snapshot 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 8,
        "flexDirection": "row",
        "justifyContent": "center",
      },
      {
        "backgroundColor": "#818CF8",
        "borderColor": undefined,
        "borderWidth": 0,
        "opacity": 1,
        "paddingHorizontal": 20,
        "paddingVertical": 12,
      },
      undefined,
    ]
  }
  testID="button"
>
  <Text
    style={
      [
        {
          "fontWeight": "600",
          "textAlign": "center",
        },
        {
          "color": "#0A0A0A",
          "fontSize": 16,
        },
      ]
    }
  >
    Click Me
  </Text>
</View>
`;

exports[`Button matches light theme snapshot 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "borderRadius": 8,
        "flexDirection": "row",
        "justifyContent": "center",
      },
      {
        "backgroundColor": "#6366F1",
        "borderColor": undefined,
        "borderWidth": 0,
        "opacity": 1,
        "paddingHorizontal": 20,
        "paddingVertical": 12,
      },
      undefined,
    ]
  }
  testID="button"
>
  <Text
    style={
      [
        {
          "fontWeight": "600",
          "textAlign": "center",
        },
        {
          "color": "#FFFFFF",
          "fontSize": 16,
        },
      ]
    }
  >
    Click Me
  </Text>
</View>
`;
